<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wak.jetpack.submission.com.wak.jetpack.details.DetailActivity"
    android:background="@color/light_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:contentDescription="@string/img_desc"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="@color/gray"

            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="-67dp" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="140dp"
            android:layout_height="210dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/img_desc"
            android:scaleType="centerCrop"
            android:src="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_data_title"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="start"
            app:layout_constraintVertical_bias="0.3"
            android:text="@string/data_title"
            android:textColor="@color/light_gray"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="@+id/img_picture" />

        <TextView
            android:id="@+id/tv_data_year"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/example_year"
            android:textColor="@color/light_gray"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_data_title" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_data_year"
            android:background="@drawable/ic_favorite_false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frame_img"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:text="@string/overview"/>

    <TextView
        android:id="@+id/tv_data_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_overview"
       android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"

        android:text="@string/data_desc"/>
</androidx.constraintlayout.widget.ConstraintLayout>